force-app/main/default/objects/AuditItem__c/fields/AuditID__c.field-meta.xml
<CustomField>
    <fullName>AuditID__c</fullName>
    <label>Audit ID</label>
    <referenceTo>Audit__c</referenceTo>
    <relationshipName>ProductScope</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>