force-app/main/default/objects/AuditItem__c/fields/CargoID__c.field-meta.xml
<CustomField>
    <fullName>CargoID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargo ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Cargo__c.CargoLifeCycle__c</field>
            <operation>notEqual</operation>
            <value>Missing, Disposed, Cancelled, No longer exists</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>AUDIT ITEM</relationshipLabel>
    <relationshipName>AuditItem</relationshipName>
    <type>Lookup</type>
</CustomField>