force-app/main/default/objects/AuditItem__c/fields/CountedQuantity__c.field-meta.xml
<CustomField>
    <fullName>CountedQuantity__c</fullName>
    <label>Counted Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>