force-app/main/default/objects/AuditItem__c/fields/NegativeQuantityTolerance__c.field-meta.xml
<CustomField>
    <fullName>NegativeQuantityTolerance__c</fullName>
    <label>Negative Adjustment Quantity Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>