force-app/main/default/objects/AuditItem__c/fields/OnHandQuantity__c.field-meta.xml
<CustomField>
    <fullName>OnHandQuantity__c</fullName>
    <label>On-Hand Quantity in System</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>