force-app/main/default/objects/AuditItem__c/fields/PositiveValueTolerance__c.field-meta.xml
<CustomField>
    <fullName>PositiveValueTolerance__c</fullName>
    <label>Positive Adjustment Value Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>