force-app/main/default/objects/AuditItem__c/fields/ProductDetail__c.field-meta.xml
<CustomField>
    <fullName>ProductDetail__c</fullName>
    <formula>ProductID__r.Summary__c</formula>
    <label>Product Detail</label>
    <type>Text</type>
</CustomField>