force-app/main/default/objects/AuditItem__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <label>Product ID</label>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipName>ProductScope</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>