force-app/main/default/objects/AuditItem__c/fields/QuantityVariance__c.field-meta.xml
<CustomField>
    <fullName>QuantityVariance__c</fullName>
    <formula>OnHandQuantity__c -  CountedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>