force-app/main/default/objects/AuditItem__c/fields/ScopeCompany__c.field-meta.xml
<CustomField>
    <fullName>ScopeCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scope Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ProductScope</relationshipName>
    <type>Lookup</type>
</CustomField>