force-app/main/default/objects/AuditItem__c/recordTypes/CargoBase.recordType-meta.xml
<RecordType>
    <fullName>CargoBase</fullName>
    <active>true</active>
    <description>Audit item scope is a single cargo.</description>
    <label>Cargo Base</label>
</RecordType>