force-app/main/default/objects/AuditItem__c/recordTypes/CompanyBase.recordType-meta.xml
<RecordType>
    <fullName>CompanyBase</fullName>
    <active>true</active>
    <description>Audit item scope is based on company. All items belonging to the company become audit scope.</description>
    <label>Company Base</label>
</RecordType>