force-app/main/default/objects/AuditItem__c/recordTypes/LocatorBase.recordType-meta.xml
<RecordType>
    <fullName>LocatorBase</fullName>
    <active>true</active>
    <description>Audit item scope is based on Locator. All items in the locator become audit scope.</description>
    <label>Locator Base</label>
</RecordType>