force-app/main/default/objects/AuditItem__c/recordTypes/ProductBase.recordType-meta.xml
<RecordType>
    <fullName>ProductBase</fullName>
    <active>true</active>
    <description>Audit item scope is based on each product.</description>
    <label>Product Base</label>
</RecordType>