force-app/main/default/objects/AuditItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>AuditID__c</columns>
    <columns>ProductID__c</columns>
    <columns>ProductDetail__c</columns>
    <columns>Status__c</columns>
    <columns>LocatorID__c</columns>
    <columns>ScopeCompany__c</columns>
    <columns>OnHandQuantity__c</columns>
    <columns>CountedQuantity__c</columns>
    <columns>QuantityVariance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>